wishlists/k8s/00-namespace.yaml
# Create a logical space ("folder") to keep this application separate from others
apiVersion: v1
kind: Namespace
metadata:
  name: wishlist
