wishlists/k8s/21-wishlist-rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlist-rest
  namespace: wishlist
spec:
  selector:
    app: wishlist-rest
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
