wishlists/k8s/22-wishlist-rest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wishlist-rest-ingress
  namespace: wishlist
spec:
  ingressClassName: nginx
  rules:
    - host: wishlist.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wishlist-rest
                port:
                  number: 8080
